--- a/nginx.conf
+++ b/nginx.conf
@@ -11,32 +11,34 @@ http {
 
     server {
         listen       80;
-        # server_name  skyfireitdiy.cn;
-        server_name  localhost;
-        location / {
-            proxy_pass http://blog_server;
-        }
+        server_name  zerone216.top;
+        #location / {
+	#    index index.html index.htm;
+        #}
+	rewrite ^/(.*)$ https://zerone216.top:443/$1 permanent;
     }
 
     # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+    server {
+        listen       443;
+        server_name  zerone216.top;
+	ssl on;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        ssl_certificate      /Workspace/my_blog/ssl/Nginx/zerone216.top.pem;
+        ssl_certificate_key  /Workspace/my_blog/ssl/Nginx/zerone216.top.key;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        location / {
+            #root   html;
+            #index  index.html index.htm;
+	    proxy_pass http://blog_server;
+        }
+    }
 
 }
