--- a/nginx.conf
+++ b/nginx.conf
@@ -12,17 +12,13 @@ http {
     server {
         listen       80;
         server_name  zerone216.top;
-        #location / {
-	#    index index.html index.htm;
-        #}
-	rewrite ^/(.*)$ https://zerone216.top:443/$1 permanent;
+	rewrite ^/(.*)$ https://zerone216.top:443/$1 permanent; #重定位
     }
 
     # HTTPS server
     server {
-        listen       443;
+        listen 443 ssl;
         server_name  zerone216.top;
-	ssl on;
 
         ssl_certificate      /Workspace/my_blog/ssl/Nginx/zerone216.top.pem;
         ssl_certificate_key  /Workspace/my_blog/ssl/Nginx/zerone216.top.key;
@@ -34,10 +30,8 @@ http {
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_prefer_server_ciphers  on;
 
-        location / {
-            #root   html;
-            #index  index.html index.htm;
-	    proxy_pass http://blog_server;
+        location / {  #匹配规则
+	    proxy_pass http://blog_server; #反向代理
         }
     }
 
