--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,18 @@ version: "3.4"
 services: 
   blog_server: 
     image: blog_build_docker
-    ports:
-      - "8080"
     volumes:
       - .:/opt/my_blog
   nginx:
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - /opt/my_blog/ssl/Nginx:/opt/my_blog/ssl/Nginx
     ports:
       - "80:80"
+      - "443:443"
     links:
       - blog_server
     depends_on:
       - blog_server
+
